--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "concurrently": "^8.2.2",
     "cookie-session": "^2.1.0",
+    "create-react-app": "^5.0.1",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
     "nodemon": "^3.1.3",
